Fix alternate index layout overflow issue

--- a/app/states/root/section-state/_section-state_styles.scss
+++ b/app/states/root/section-state/_section-state_styles.scss
@@ -73,23 +73,43 @@
 	font-style: italic;
 }
 
+.alt-index-project-wrapper
+{
+	overflow-x: hidden;
+	margin: 0 2rem;
+}
+
 .alt-index-project
 {
 	flex-flow: row;
 	align-items: center;
+	justify-content: space-between;
 
 	height: 150px;
 	padding: 1rem 0;
 	border-bottom: 1px solid lighten($black, 90%);
 }
 
+.alt-project-title-and-image
+{
+	flex-flow: row nowrap;
+
+	max-width: 80%;
+}
+
 .alt-project-image
 {
-	height: 100%;
+	height: 100px;
 	min-width: 200px;
+	margin-right: 10px;
 	background-position: left;
 	background-size: contain;
 	background-repeat: no-repeat;
 
 	white-space: normal;
+}
+
+.alt-project-awarded
+{
+	align-items: flex-end;
 }
